// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edge function 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as cloudfront from '@aws-cdk/aws-cloudfront';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends cloudfront.experimental.EdgeFunctionProps {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends cloudfront.experimental.EdgeFunction {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.edge-lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.edge-lambda')),
    });
  }
}"
`;

exports[`NODEJS_REGIONAL_LATEST runtime explicitly set NODEJS_REGIONAL_LATEST has no override prop 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from 'aws-cdk-lib/aws-lambda';
import { determineLatestNodeRuntime } from 'aws-cdk-lib/aws-lambda';
import { Construct } from 'constructs';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`NODEJS_REGIONAL_LATEST runtime generates code using determineLatestNodeRuntime() when no runtime specified 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from 'aws-cdk-lib/aws-lambda';
import { determineLatestNodeRuntime } from 'aws-cdk-lib/aws-lambda';
import { Construct } from 'constructs';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`auto-discover 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: new lambda.Runtime('nodejs22.x', lambda.RuntimeFamily.NODEJS),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`auto-discover 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for WorldFunction
 */
export interface WorldFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/subdir/world.
 */
export class WorldFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: WorldFunctionProps) {
    super(scope, id, {
      description: 'src/subdir/world.lambda.ts',
      ...props,
      runtime: new lambda.Runtime('nodejs22.x', lambda.RuntimeFamily.NODEJS),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../../assets/subdir/world.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`auto-discover 3`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for JangyFunction
 */
export interface JangyFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/subdir/jangy.
 */
export class JangyFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: JangyFunctionProps) {
    super(scope, id, {
      description: 'src/subdir/jangy.lambda.ts',
      ...props,
      runtime: new lambda.Runtime('nodejs22.x', lambda.RuntimeFamily.NODEJS),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../../assets/subdir/jangy.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`auto-discover 4`] = `
{
  "description": "Prepare assets",
  "name": "bundle",
  "steps": [
    {
      "spawn": "bundle:hello.lambda",
    },
    {
      "spawn": "bundle:subdir/jangy.lambda",
    },
    {
      "spawn": "bundle:subdir/world.lambda",
    },
  ],
}
`;

exports[`auto-discover 5`] = `
{
  "description": "Create a JavaScript bundle from src/hello.lambda.ts",
  "name": "bundle:hello.lambda",
  "steps": [
    {
      "exec": "esbuild --bundle src/hello.lambda.ts --target="node22" --platform="node" --outfile="assets/hello.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/*",
    },
  ],
}
`;

exports[`auto-discover 6`] = `
{
  "description": "Continuously update the JavaScript bundle from src/hello.lambda.ts",
  "name": "bundle:hello.lambda:watch",
  "steps": [
    {
      "exec": "esbuild --bundle src/hello.lambda.ts --target="node22" --platform="node" --outfile="assets/hello.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/* --watch",
    },
  ],
}
`;

exports[`auto-discover 7`] = `
{
  "description": "Create a JavaScript bundle from src/subdir/jangy.lambda.ts",
  "name": "bundle:subdir/jangy.lambda",
  "steps": [
    {
      "exec": "esbuild --bundle src/subdir/jangy.lambda.ts --target="node22" --platform="node" --outfile="assets/subdir/jangy.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/*",
    },
  ],
}
`;

exports[`auto-discover 8`] = `
{
  "description": "Continuously update the JavaScript bundle from src/subdir/jangy.lambda.ts",
  "name": "bundle:subdir/jangy.lambda:watch",
  "steps": [
    {
      "exec": "esbuild --bundle src/subdir/jangy.lambda.ts --target="node22" --platform="node" --outfile="assets/subdir/jangy.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/* --watch",
    },
  ],
}
`;

exports[`auto-discover 9`] = `
{
  "description": "Create a JavaScript bundle from src/subdir/world.lambda.ts",
  "name": "bundle:subdir/world.lambda",
  "steps": [
    {
      "exec": "esbuild --bundle src/subdir/world.lambda.ts --target="node22" --platform="node" --outfile="assets/subdir/world.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/*",
    },
  ],
}
`;

exports[`auto-discover 10`] = `
{
  "description": "Continuously update the JavaScript bundle from src/subdir/world.lambda.ts",
  "name": "bundle:subdir/world.lambda:watch",
  "steps": [
    {
      "exec": "esbuild --bundle src/subdir/world.lambda.ts --target="node22" --platform="node" --outfile="assets/subdir/world.lambda/index.js" --tsconfig="tsconfig.dev.json" --external:@aws-sdk/* --watch",
    },
  ],
}
`;

exports[`bundled function generates source code for a lambda construct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../my-assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`constructFile and constructName can be used to customize the generated construct 1`] = `undefined`;

exports[`generates cdkv2-compatible imports 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from 'aws-cdk-lib/aws-lambda';
import { determineLatestNodeRuntime } from 'aws-cdk-lib/aws-lambda';
import { Construct } from 'constructs';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`multiple functions 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`multiple functions 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for WorldFunction
 */
export interface WorldFunctionProps extends lambda.FunctionOptions {
    /**
     * The Lambda runtime to use.
     * @default - Latest Node.js runtime available in the deployment region
     */
    readonly runtime?: lambda.Runtime;
}

/**
 * An AWS Lambda function which executes src/world.
 */
export class WorldFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: WorldFunctionProps) {
    super(scope, id, {
      description: 'src/world.lambda.ts',
      ...props,
      runtime: props?.runtime ?? determineLatestNodeRuntime(scope),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/world.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;

exports[`runtime override support explicit runtime is hardcoded without override support 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import * as path from 'path';
import * as lambda from 'aws-cdk-lib/aws-lambda';
import { Construct } from 'constructs';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: new lambda.Runtime('nodejs20.x', lambda.RuntimeFamily.NODEJS),
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/hello.lambda')),
    });
    this.addEnvironment('AWS_NODEJS_CONNECTION_REUSE_ENABLED', '1', { removeInEdge: true });
  }
}"
`;
